# mapt2-framework

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  index.md  mainpage.txt
README/: CREDITS
analysis/: CMakeLists.txt  analysis.cc
dst/: CMakeLists.txt  params.txt  simdst.cc
event_display/: CMakeLists.txt  C_data.cpp  C_data.h  C_mainwindow.cpp  C_mainwindow.h  C_quader.cpp  C_quader.h  C_view_2D.cpp  C_view_2D.h  C_view_3D.cpp  C_view_3D.h  C_view_coordinatesystem.cpp  C_view_coordinatesystem.h  C_view_xz.cpp  C_view_xz.h  C_view_yz.cpp  C_view_yz.h  C_window_2D.cpp  C_window_2D.h  C_window_3D.cpp  C_window_3D.h  C_window_xz.cpp  C_window_xz.h  C_window_yz.cpp  C_window_yz.h  fragmentShader.fsh  main.cpp  moc_C_mainwindow.cpp  moc_C_view_3D.cpp  moc_C_view_coordinatesystem.cpp  moc_C_view_xz.cpp  moc_C_view_yz.cpp  moc_C_window_3D.cpp  moc_C_window_xz.cpp  moc_C_window_yz.cpp  qrc_resources.cpp  vertexShader.vsh
geometry/: CMakeLists.txt
geometry/include/: AbsPart.h  AbsPartCGAL.h  CADFiber.h  CADFiberCGAL.h  CADPart.h  CADPartCGAL.h  GeometryReadIn.h  GeometryReadInCGAL.h  Material.h  UserCGALGeometry.h  UserGeant4Geometry.h  trianglemesh.h
geometry/src/: AbsPart.cc  AbsPartCGAL.cc  CADFiber.cc  CADFiberCGAL.cc  CADPart.cc  CADPartCGAL.cc  GeometryReadIn.cc  GeometryReadInCGAL.cc  Material.cc  UserCGALGeometry.cc  UserGeant4Geometry.cc  trianglemesh.cc
lib/: AnalysisData.cc  AnalysisData.h  B1DetectorResponse.cc  B1DetectorResponse.hh  B1Particle.cc  B1Particle.hh  CMakeLists.txt  Category.cc  Category.hh  DataManager.cc  DataManager.hh  DictOutput.hh  Event.cc  Event.h  EventSim.cc  EventSim.h  GeantSim.cc  GeantSim.h  Hits30x30.cc  Hits30x30.h  Linkdef.h  ParticlePF.cc  ParticlePF.hh  PatternRecognitionData.cc  PatternRecognitionData.hh  Track.cc  Track.h  analysisData.cc  analysisData.h  particlePF.cc  particlePF.hh  patternRecognitionData.cc  patternRecognitionData.hh
lib/base/: CMakeLists.txt  Linkdef.h  MCategory.cc  MCategory.h  MCategoryHeader.cc  MCategoryHeader.h  MCategoryIndex.cc  MCategoryIndex.h  MDataManager.cc  MDataManager.h  MDetector.cc  MDetector.h  MDetectorManager.cc  MDetectorManager.h  MLocator.cc  MLocator.h  MLookup.cc  MLookup.h  MLookupContainer.cc  MLookupContainer.h  MLookupManager.cc  MLookupManager.h  MMAPTManager.cc  MMAPTManager.h  MPar.cc  MPar.h  MParContainer.cc  MParContainer.h  MParManager.cc  MParManager.h  MTask.cc  MTask.h  MTaskManager.cc  MTaskManager.h
lib/fibers/: CMakeLists.txt  Linkdef.h  MFibersCal.cc  MFibersCal.h  MFibersCalSim.cc  MFibersCalSim.h  MFibersCalibrator.cc  MFibersCalibrator.h  MFibersCalibratorPar.cc  MFibersCalibratorPar.h  MFibersDetector.cc  MFibersDetector.h  MFibersDigitizer.cc  MFibersDigitizer.h  MFibersDigitizerPar.cc  MFibersDigitizerPar.h  MFibersGeomPar.cc  MFibersGeomPar.h  MFibersRaw.cc  MFibersRaw.h  MFibersUnpacker.cc  MFibersUnpacker.h
lib/fibers_stack/: CMakeLists.txt  Linkdef.h  MFibersStackCal.cc  MFibersStackCal.h  MFibersStackCalSim.cc  MFibersStackCalSim.h  MFibersStackCalibrator.cc  MFibersStackCalibrator.h  MFibersStackCalibratorPar.cc  MFibersStackCalibratorPar.h  MFibersStackDetector.cc  MFibersStackDetector.h  MFibersStackDigitizer.cc  MFibersStackDigitizer.h  MFibersStackDigitizerPar.cc  MFibersStackDigitizerPar.h  MFibersStackGeomPar.cc  MFibersStackGeomPar.h  MFibersStackRaw.cc  MFibersStackRaw.h  MFibersStackUnpacker.cc  MFibersStackUnpacker.h
lib/geant/: CMakeLists.txt  Linkdef.h  MGeantFibersRaw.cc  MGeantFibersRaw.h  MGeantSim.cc  MGeantSim.h  MGeantTrack.cc  MGeantTrack.h
lib/tools/: CMakeLists.txt  Linkdef.h  MProgressBar.cc  MProgressBar.h
models/CR/sim/: CR_dst.sh.example  CR_model.sh.example  README.md  clear_logs.sh  config_CR.txt  data_h_pid_1000020040_w.txt  data_h_pid_1000030070_w.txt  data_h_pid_1000040090_w.txt  data_h_pid_1000050110_w.txt  data_h_pid_1000060120_w.txt  data_h_pid_1000070140_w.txt  data_h_pid_1000080160_w.txt  data_h_pid_1000090190_w.txt  data_h_pid_1000100200_w.txt  data_h_pid_1000110230_w.txt  data_h_pid_1000120240_w.txt  data_h_pid_1000130270_w.txt  data_h_pid_1000140280_w.txt  data_h_pid_1000150310_w.txt  data_h_pid_1000160320_w.txt  data_h_pid_1000170350_w.txt  data_h_pid_1000180400_w.txt  data_h_pid_1000190390_w.txt  data_h_pid_1000200400_w.txt  data_h_pid_1000210450_w.txt  data_h_pid_1000220480_w.txt  data_h_pid_1000230510_w.txt  data_h_pid_1000240520_w.txt  data_h_pid_1000250550_w.txt  data_h_pid_1000260560_w.txt  data_h_pid_2212_w.txt  params.txt
models/CR/sim/cards_gps_CR/: 11_5_B.txt  12_6_C.txt  14_7_N.txt  16_8_O.txt  19_9_F.txt  1_H.txt  20_10_Ne.txt  23_11_Na.txt  24_12_Mg.txt  27_13_Al.txt  28_14_Si.txt  31_15_P.txt  32_16_S.txt  35_17_Cl.txt  39_19_K.txt  40_18_Ar.txt  40_20_Ca.txt  45_21_Sc.txt  (+10 more)
particle_filter/: CMakeLists.txt  PFAnalysis.cc
particle_filter/include/: Particle.h  ParticleFilter.h  Physics.h  RandomGenerator.h
particle_filter/src/: Particle.cc  ParticleFilter.cc  Physics.cc  RandomGenerator.cc
python/: CMakeLists.txt  MAPT.cpp  MAPT.h  example.py  mapt_python.cpp  mapt_python.pyx  mfibersstackcal.cpp  mfibersstackcal.pxd  mfibersstackcal.pyx  mfibersstackcalsim.cpp  mfibersstackcalsim.pxd  mfibersstackcalsim.pyx  mgeantfibersraw.cpp  mgeantfibersraw.pxd  mgeantfibersraw.pyx  mgeanttrack.cpp  mgeanttrack.pxd  mgeanttrack.pyx  setup.py  setup.py.in
simulation/: CMakeLists.txt  exampleB1.cc  params.txt
simulation/example/: CMakeLists.txt  Config.txt.example  geometry.txt  gps_sphere_iso_mono.mac
simulation/include/: B1ActionInitialization.hh  B1Config.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PhysicsList.hh  B1PrimaryGeneratorAction.hh  B1Run.hh  B1RunAction.hh  B1SteppingAction.hh  B1TrackingAction.hh  MAPTEMStandardPhysics.hh
simulation/src/: B1ActionInitialization.cc  B1Config.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PhysicsList.cc  B1PrimaryGeneratorAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc  B1TrackingAction.cc  MAPTEMStandardPhysics.cc
template_app/: CMakeLists.txt  template_app.cpp
tests/: CMakeLists.txt  basic_tests.cpp  lookup.txt
